<resources>
    <string name="app_name">SimpleFinance</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_register_user">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email is invalid or alredy registered</string>
    <string name="error_login">Email and Password dont match</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="title_activity_register">Register</string>
    <string name="name_user">Name</string>
    <string name="register_user">Register</string>
    <string name="error_pass_not_equal">Password dont match</string>
    <string name="title_activity_extrato">ExtratoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rec_des">RecDesActivity</string>
    <string name="title_activity_categoria">CategoriaActivity</string>
    <string name="title_activity_categoria_reg">CategoriaRegActivity</string>

    <string-array name="array_repetir">
        <item>So uma vez</item>
        <item>Mensalmente</item>
        <item>Cada 3 meses</item>
        <item>Semestralmente</item>
        <item>Anualmente</item>
    </string-array>
    <string name="title_activity_categoria_atualizar_remover">CategoriaAtualizarRemoverActivity
    </string>
    <string name="title_activity_lancamento_editar_remover">Editar ou Remover Lancamento</string>
    <string name="title_activity_resultado_filtro_lancamento">ResultadoFiltroLancamentoActivity
    </string>

</resources>
